--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Airu.QueueActivity"></activity>
+        <activity android:name=".model.dmmyactivity"></activity>
+        <activity android:name=".Airu.QueueActivity" />
         <activity
             android:name=".MainActivity"
             android:screenOrientation="portrait">
