--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         <activity android:name=".model.dmmyactivity"></activity>
         <activity android:name=".Airu.QueueActivity" />
         <activity
-            android:name=".MainActivity"
+            android:name=".screen.main.MainActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
